--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.6",
     "@types/react": "18.0.17",
     "@types/react-redux": "^7.1.24",
     "eslint": "8.22.0",
