--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
     "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-redux": "^8.0.2",
+    "react-speech-recognition": "^3.9.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.6",
     "@types/react": "18.0.17",
     "@types/react-redux": "^7.1.24",
+    "@types/react-speech-recognition": "^3.9.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "typescript": "4.7.4"
