--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.10.1",
+    "@mui/styled-engine-sc": "^5.10.1",
     "@reduxjs/toolkit": "^1.8.4",
     "next": "12.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^8.0.2",
     "react-speech-recognition": "^3.9.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "^18.7.6",
