--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.2",
     "react-redux": "^8.0.2",
     "react-speech-recognition": "^3.9.1",
+    "react-toastify": "^9.0.8",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5"
   },
