--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-speech-recognition": "^3.9.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "prettier": "^2.7.1",
     "typescript": "4.7.4"
   }
 }
